midiSequencerInputUnit/Firmware/build/log/idf_py_stdout_output_56079
[1/13] Building C object esp-idf/system/CMakeFiles/__idf_system.dir/systemEvents.c.obj
[2/13] Building C object esp-idf/midi/CMakeFiles/__idf_midi.dir/midi.c.obj
FAILED: esp-idf/midi/CMakeFiles/__idf_midi.dir/midi.c.obj 
/home/synth002/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc  -I/home/synth002/Desktop/Firmware/build/config -I/home/synth002/Desktop/Firmware/components/midi/include -I/home/synth002/esp/esp-idf-v5.0/components/newlib/platform_include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/esp_additions/include/freertos -I/home/synth002/esp/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/esp_additions/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include/soc -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include/soc/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/port/esp32s3/. -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/port/esp32s3/private_include -I/home/synth002/esp/esp-idf-v5.0/components/heap/include -I/home/synth002/esp/esp-idf-v5.0/components/log/include -I/home/synth002/esp/esp-idf-v5.0/components/soc/include -I/home/synth002/esp/esp-idf-v5.0/components/soc/esp32s3/. -I/home/synth002/esp/esp-idf-v5.0/components/soc/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/platform_port/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/include/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_common/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/port/soc -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/port/include/private -I/home/synth002/esp/esp-idf-v5.0/components/xtensa/include -I/home/synth002/esp/esp-idf-v5.0/components/xtensa/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include/apps -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include/apps/sntp -I/home/synth002/esp/esp-idf-v5.0/components/lwip/lwip/src/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/port/esp32/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/port/esp32/include/arch -I/home/synth002/esp/esp-idf-v5.0/components/driver/include -I/home/synth002/esp/esp-idf-v5.0/components/driver/deprecated -I/home/synth002/esp/esp-idf-v5.0/components/driver/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_pm/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_ringbuf/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/synth002/Desktop/Firmware=. -fmacro-prefix-map=/home/synth002/esp/esp-idf-v5.0=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/midi/CMakeFiles/__idf_midi.dir/midi.c.obj -MF esp-idf/midi/CMakeFiles/__idf_midi.dir/midi.c.obj.d -o esp-idf/midi/CMakeFiles/__idf_midi.dir/midi.c.obj -c /home/synth002/Desktop/Firmware/components/midi/midi.c
/home/synth002/Desktop/Firmware/components/midi/midi.c: In function 'processMidiFileDeltaTime':
/home/synth002/Desktop/Firmware/components/midi/midi.c:124:8: error: implicit declaration of function 'GET_MSBIT_IN_BYTE' [-Werror=implicit-function-declaration]
  124 |     if(GET_MSBIT_IN_BYTE(*midiFilePtr))
      |        ^~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[3/13] Performing build step for 'bootloader'
[1/1] cd /home/synth002/Desktop/Firmware/build/bootloader/esp-idf/esptool_py && /home/synth002/.espressif/python_env/idf5.0_py3.10_env/bin/python /home/synth002/esp/esp-idf-v5.0/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/synth002/Desktop/Firmware/build/bootloader/bootloader.bin
Bootloader binary size 0x55d0 bytes. 0x2a30 bytes (33%) free.
[4/11] Building C object esp-idf/system/CMakeFiles/__idf_system.dir/sequencerGrid.c.obj
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c: In function 'gridDataToMidiFile':
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c:684:16: warning: assignment discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  684 |     fileBuffer = trackChunkBasePtr + MIDI_TRACK_HEADER_NUM_BYTES;
      |                ^
At top level:
/home/synth002/Desktop/Firmware/components/system/sequencerGrid.c:72:13: warning: 'deleteEventNode' defined but not used [-Wunused-function]
   72 | static void deleteEventNode(SequencerGridItem_t ** eventNodePtr)
      |             ^~~~~~~~~~~~~~~
[5/11] Building C object esp-idf/system/CMakeFiles/__idf_system.dir/system.c.obj
/home/synth002/Desktop/Firmware/components/system/system.c: In function 'system_EntryPoint':
/home/synth002/Desktop/Firmware/components/system/system.c:133:47: warning: passing argument 1 of 'createNewSequencerProject' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  133 |                 if (createNewSequencerProject(midiFileBufferBASEPtr, ProjectSettings.fileName, ProjectSettings.projectTempo, ProjectSettings.quantization) != 0)
      |                                               ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/synth002/Desktop/Firmware/components/system/system.c:3:
/home/synth002/Desktop/Firmware/components/system/include/systemEvents.h:5:45: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
    5 | uint8_t createNewSequencerProject(uint8_t * midiFileBufferPtr, char * fileName, uint8_t tempo, uint8_t quantization);
      |                                   ~~~~~~~~~~^~~~~~~~~~~~~~~~~
/home/synth002/Desktop/Firmware/components/system/system.c:79:10: warning: variable 'hasGridInput' set but not used [-Wunused-but-set-variable]
   79 |     bool hasGridInput = false;
      |          ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
